namespace RVPark.Models;

public enum BillType
{
    SiteCharge,
    LateFee,
    CancellationFee,
    EarlyCheckInFee,
    LateCheckOutFee
}
