namespace RVPark.Models;

public enum EmployeeAccessLevel
{
    Admin,
    Manager,
    Staff
}
