namespace RVPark.Models;

public enum HookupType
{
    FullHookup,
    PartialHookup,
    NoHookup
}
