namespace RVPark.Models;

public enum PaymentMethod
{
    Cash,
    Card,
    Check,
    Stripe
}
