namespace RVPark.Models;

public enum ReservationStatus
{
    PendingPayment,
    Confirmed,
    CheckedIn,
    Completed,
    Cancelled
}
